@@ -19,7 +19,7 @@ Name: rpm
 %define version 4.0.3
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.93
+Release: 0.94
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -510,6 +510,9 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Fri Aug 17 2001 Jeff Johnson <jbj@redhat.com>
+- verify perms (but not mode) on %ghost files.
+
 * Thu Aug 16 2001 Jeff Johnson <jbj@redhat.com>
 - python: add exception to detect bad data in hdrUnload.
 - change dir creation message from warning to debug for now.
