@@ -219,6 +219,7 @@
 	- ppc: autoconf test for va_copy.
 	- python: add exception to detect bad data in hdrUnload.
 	- change dir creation message from warning to debug for now.
+	- verify perms (but not mode) on %ghost files.
 
 4.0 -> 4.0.2
 	- fix: avoid calling getpass twice as side effect of xstrdup macro
